fix: RAG — remplacer embeddings Gemini par scoring BM25 keyword (pas de dépendance API externe)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>